[project]
name = "building-llms-for-production"
version = "0.1.0"
description = "This repository is a collection of code and resources for building large language models (LLMs) for production use."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.0.2",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.18",
    "langchain[google-genai]>=0.3.25",
    "langgraph>=0.4.7",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
